[project]
name = "tart-bot"
version = "0.1.0"
description = "tart-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_questionmark", "nonebot_plugin_today_waifu","select_todo","select_meow"]
plugin_dirs = []
builtin_plugins = ["echo", "single_session"]
